# MOES-RAG

./: .gitignore  DEPLOYMENT_GUIDE.md  DNV.xlsx  PUBLISHING_GUIDE.md  QUICKSTART.md  README-cn.md  README.md  USER_DOWNLOAD_GUIDE.md  demo_m2.py  demo_m3.py  m1_parser_config.json  pyproject.toml  requirements.txt  setup.ps1  setup.sh  start_m8.py  test_e2e.py  test_member_api_routes.py  test_member_management.py
contracts/: __init__.py  api_schemas.py  conftest.py  document.py  knowledge_graph.py  pyproject.toml  qa_engine.py  retrieval.py  storage.py
contracts/tests/: __init__.py  test_api_schemas.py  test_protocols.py
m1-doc-parsing/: pyproject.toml  requirements.txt
m1-doc-parsing/m1_parser/: __init__.py
m1-doc-parsing/m1_parser/backends/: __init__.py  docling_backend.py  marker_backend.py  mineru_backend.py
m1-doc-parsing/m1_parser/core/: __init__.py  config.py  converter.py  quality.py  router.py
m1-doc-parsing/m1_parser/enrichments/: __init__.py  marine_metadata.py  table_annotator.py  table_merger.py
m1-doc-parsing/m1_parser/integration/: __init__.py  m2_bridge.py
m1-doc-parsing/m1_parser/output/: __init__.py  chunker.py  image_manager.py  serializer.py
m1-doc-parsing/m1_parser/standalone/: __init__.py  cli.py  web_server.py
m1-doc-parsing/src/: __init__.py
m1-doc-parsing/tests/: __init__.py  conftest.py  test_chunker.py  test_cli.py  test_config.py  test_converter.py  test_docling_backend.py  test_image_manager.py  test_m2_bridge.py  test_marine_metadata.py  test_quality.py  test_router.py  test_serializer.py
m2-storage/: deploy.yaml  pyproject.toml  requirements.txt
m2-storage/m2_storage/: __init__.py  config.py  factory.py  manager.py
m2-storage/m2_storage/document_index/: __init__.py  base.py  elasticsearch_index.py  meilisearch_index.py
m2-storage/m2_storage/file_store/: __init__.py  base.py  local_fs.py  minio_store.py
m2-storage/m2_storage/relational_db/: __init__.py  postgresql_db.py  sqlite_db.py
m2-storage/m2_storage/vector_store/: __init__.py  chromadb_store.py  faiss_store.py  milvus_store.py  qdrant_store.py
m2-storage/src/: __init__.py  config.py  factory.py  manager.py
m2-storage/src/document_index/: __init__.py  meilisearch_index.py
m2-storage/src/file_store/: __init__.py  local_fs.py
m2-storage/src/relational_db/: base.py  sqlite_db.py
m2-storage/src/vector_store/: base.py  chromadb_store.py
m2-storage/tests/: conftest.py  test_chromadb.py  test_config.py  test_elasticsearch.py  test_factory.py  test_local_fs.py  test_manager.py  test_meilisearch.py  test_minio.py  test_postgresql.py  test_sqlite.py
m3-retrieval/: pyproject.toml  requirements.txt
m3-retrieval/m3_retrieval/: __init__.py
m3-retrieval/m3_retrieval/core/: __init__.py  config.py  engine.py  metrics.py  pipeline.py
m3-retrieval/m3_retrieval/embeddings/: proposition_extractor.py
m3-retrieval/m3_retrieval/integration/: __init__.py  m2_client.py
m3-retrieval/m3_retrieval/stages/: __init__.py  context_expander.py  fusion.py  query_analyzer.py  reranker.py  sparse_retriever.py
m3-retrieval/m3_retrieval/standalone/: __init__.py  search_server.py
m3-retrieval/src/: __init__.py
m3-retrieval/tests/: test_config.py  test_context_expander.py  test_engine.py  test_fusion.py  test_metrics.py  test_query_analyzer.py  test_reranker.py  test_sparse_retriever.py
m4-knowledge-graph/: pyproject.toml  requirements.txt
m4-knowledge-graph/m4_kg/: __init__.py
m4-knowledge-graph/m4_kg/core/: __init__.py  config.py  engine.py  tier.py
m4-knowledge-graph/m4_kg/extraction/: __init__.py  llm_extractor.py  merger.py  prompt_templates.py  rule_extractor.py
m4-knowledge-graph/m4_kg/graph/: __init__.py  kuzu_store.py  schema.py  traversal.py
m4-knowledge-graph/m4_kg/integration/: __init__.py  m1_bridge.py
m4-knowledge-graph/m4_kg/search/: __init__.py  cross_reference.py  graph_search.py
m4-knowledge-graph/src/: __init__.py
m4-knowledge-graph/tests/: __init__.py  test_config.py  test_cross_reference.py  test_engine.py  test_graph_search.py  test_kuzu_store.py  test_llm_extractor.py  test_merger.py  test_rule_extractor.py  test_tier.py  test_traversal.py
m5-qa-engine/: pyproject.toml  requirements-mock.txt  requirements.txt
m5-qa-engine/m5_qa/: __init__.py
m5-qa-engine/m5_qa/context/: __init__.py  citation_builder.py  fusion.py  retriever.py  token_budget.py  web_search.py
m5-qa-engine/m5_qa/conversation/: __init__.py  compressor.py  manager.py
m5-qa-engine/m5_qa/core/: __init__.py  config.py  engine.py  router.py  tier.py
m5-qa-engine/m5_qa/generation/: __init__.py  llm_client.py  prompt_manager.py  streaming.py
m5-qa-engine/m5_qa/monitoring/: __init__.py  logger.py  metrics.py
m5-qa-engine/m5_qa/pipelines/: __init__.py  pipeline.py  self_rag.py  simple.py
m5-qa-engine/m5_qa/project/: export.py  manager.py  search_scope.py
m5-qa-engine/m5_qa/research/: __init__.py  analyzer.py  complexity.py  export_pdf.py  planner.py  progress.py  report_generator.py
m5-qa-engine/src/: __init__.py
m5-qa-engine/src/mock_server/: __init__.py  (+7 more)
m5-qa-engine/tests/: __init__.py  test_agent_regulations.py  test_agent_web.py  test_analyzer.py  test_citation_builder.py  test_complexity.py  test_compressor.py  test_config.py  test_conversation_manager.py  test_engine.py  test_fusion.py  test_llm_client.py  test_metrics.py  test_pipeline.py  test_planner.py  test_project_manager.py  test_prompt_manager.py  test_report_generator.py  test_retriever.py  test_router.py  test_self_rag.py  test_simple.py  test_streaming.py  test_tier.py  test_token_budget.py
m8-api-gateway/: README-cn.md  README.md  pyproject.toml  requirements.txt
m8-api-gateway/m8_gateway/: __init__.py
m8-api-gateway/src/: __init__.py
m8-api-gateway/tests/: __init__.py  conftest.py  test_chat.py  test_config.py  test_conversations.py  test_documents.py  test_key_manager.py  test_keys.py  test_limiter.py  test_models.py  test_openai_compat.py  test_redis_client.py  test_redis_limiter.py
mock-server/: pyproject.toml
mock-server/tests/: __init__.py  conftest.py  test_mock_server.py
(+297 files in other folders)
