[project]
name = "marine-rag"
version = "0.1.0"
description = "船舶与海洋工程工业 RAG 智能问答系统"
license = {text = "Proprietary"}
requires-python = ">=3.12"
authors = [
    {name = "Victor"}
]
keywords = ["rag", "marine", "offshore", "ship", "classification-society"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
