[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marine-rag-contracts"
version = "0.1.0"
description = "Interface contracts for Marine & Offshore Expert System modules"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.setuptools.packages.find]
where = ["."]
