[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m1-doc-parsing"
version = "0.1.0"
description = "Marine & Offshore Expert System -- Document Parsing Engine (M1)"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.94.0",
    "pyyaml>=6.0",
    "python-magic>=0.4.27",
    "langdetect>=1.0.9",
]

[project.optional-dependencies]
vlm = ["torch>=2.0"]
ocr = ["paddleocr>=2.7", "easyocr>=1.7"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]
all = ["m1-doc-parsing[vlm,ocr,dev]"]

[project.scripts]
m1-parser = "m1_parser.standalone.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
