[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m3-retrieval"
version = "0.1.0"
description = "Marine & Offshore Expert System -- Retrieval Engine (M3)"
requires-python = ">=3.12"
dependencies = [
    "FlagEmbedding>=1.2.0",
    "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]
web = ["fastapi>=0.100.0", "uvicorn>=0.30.0", "python-multipart>=0.0.9"]
all = ["m3-retrieval[dev,web]"]

[project.scripts]
m3-search = "m3_retrieval.standalone.search_server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
