[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "m5-qa-engine-mock"
version = "0.1.0"
description = "Mock Server for Marine & Offshore Expert System Phase 1"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
