[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m5-qa-engine"
version = "0.1.0"
description = "Marine & Offshore Expert System -- RAG QA Engine (M5)"
requires-python = ">=3.12"
dependencies = [
    "marine-rag-contracts>=0.1.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0"]
all = ["m5-qa-engine[dev]"]

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
