[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m8-api-gateway"
version = "0.1.0"
description = "Marine & Offshore Expert System -- API Gateway (M8)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23.0", "httpx>=0.27.0"]
all = ["m8-api-gateway[dev]"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
