[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "marine-rag-mock-server"
version = "0.1.0"
description = "Standalone mock API server for Marine & Offshore Expert System development and debugging"
requires-python = ">=3.12"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
